Added Visitor package

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "bakame/laravel-domain-parser": "^1.3",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "shetabit/visitor": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
