--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "bakame/laravel-domain-parser": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "shetabit/visitor": "^4.3"
+        "shetabit/visitor": "^4.3",
+        "symfony/http-client": "^7.1",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
